--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "lenis": "^1.3.14",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "react": "19.2.0",
@@ -28,6 +29,7 @@
     "react-dom": "19.2.0",
     "react-fast-marquee": "^1.6.5",
     "react-hot-toast": "^2.6.0",
+    "react-player": "^3.4.0",
     "tailwind-merge": "^3.4.0",
     "three": "^0.181.1"
   },
