--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
+    "next-cloudinary": "^6.17.5",
     "react": "19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
